fix paging overlapping the footer

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
 
 footer {
   position: absolute;
+  z-index:100;
   left:0;
   bottom: 0;
   width: 100%;
